--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css?family=Macondo+Swash+Caps&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Raleway&display=swap');
+
 html{
     box-sizing: border-box;
 }
@@ -9,11 +12,13 @@ html{
 #wrapper{
     background-color: #cca677;
     height: 100px;
+    display: grid;
+    vertical-align: middle;
 }
 
 #title{
     text-align: left;
-    margin-left: 50px;
+    margin-left: 40px;
 }
 
 body{
@@ -26,6 +31,16 @@ img{
 }
 
 footer {
+    clear: both;
+    background-color: #cca677;
     align-content: center;
     text-align: center;
+}
+
+h1 {
+    font-family: 'Macondo Swash Caps', cursive;
+}
+
+h2 {
+    font-family: 'Raleway', sans-serif;
 }
