--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,8 @@ html{
 #title{
     text-align: left;
     margin-left: 40px;
+    font-family: 'Macondo Swash Caps', cursive;
+    font-size: 3em;
 }
 
 body{
@@ -27,7 +29,7 @@ body{
 
 img{
     float: right;
-    margin-right: 40px;
+    margin: 40px;
 }
 
 footer {
@@ -36,10 +38,6 @@ footer {
     background-color: #cca677;
     height: 100px;
     text-align: center;
-}
-
-h1 {
-    font-family: 'Macondo Swash Caps', cursive;
 }
 
 h2 {
